tdf#97505 Account empty pages for print preview

Commit 1296f9dc9e502abd8422dfeee1ac7747a82aee17 was just a workaround
to fix the crash, while I couldn't find a way to get the layout from
the print preview, as all shells seemed empty. Took me a while to
realize the SwViewShell also has a layout, which is available, so we
can account for the empty pages correctly.

Change-Id: Icf0e9fdc0c1eeb6cadc48482595482545fd553e7